--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     },
     "scripts": {
-        "tests": "phpunit --color=always --testdox tests/"
+        "tests": "phpunit --color=always --testdox tests/",
+        "csfix": "php-cs-fixer fix --diff"
     },
     "authors": [
         {
@@ -23,6 +24,7 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^12.1"
+        "phpunit/phpunit": "^12.1",
+        "friendsofphp/php-cs-fixer": "^3.75"
     }
 }
