--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "files": [
             "src/Helpers/http.php",
             "src/Helpers/kernel.php",
-            "src/Helpers/string.php"
+            "src/Helpers/string.php",
+            "src/Helpers/session.php"
         ]
     },
     "autoload-dev": {
