--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
             "src/Helpers/http.php",
             "src/Helpers/kernel.php",
             "src/Helpers/string.php",
-            "src/Helpers/session.php"
+            "src/Helpers/session.php",
+            "src/Utils/Constants.php"
         ]
     },
     "autoload-dev": {
