--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     },
     "scripts": {
-        "tests": "phpunit --color=always --testdox tests/",
+        "tests": "phpunit --color=always --testdox -v tests/",
         "csfix": "php-cs-fixer fix --diff"
     },
     "authors": [
@@ -32,7 +32,7 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^12.1.0",
+        "phpunit/phpunit": "9.5.20",
         "friendsofphp/php-cs-fixer": "^3.8"
     }
 }
