--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,8 @@
     "require-dev": {
         "phpunit/phpunit": "9.5.20",
         "friendsofphp/php-cs-fixer": "^3.8"
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
     }
 }
