feat: add service providers for routing and validation; implement RouteServiceProvider and RuleServiceProvider; enhance routing functionality; update autoload configuration

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Pickles\\": "src/"
+            "Pickles\\": "src/",
+            "App\\": "app/"
         },
         "files": [
             "src/Helpers/http.php",
