--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
             "src/Helpers/string.php",
             "src/Helpers/session.php",
             "src/Helpers/database.php",
+            "src/Helpers/hasher.php",
+            "src/Helpers/auth.php",
             "src/Utils/Constants.php"
         ]
     },
@@ -37,6 +39,12 @@
         "friendsofphp/php-cs-fixer": "^3.8"
     },
     "require": {
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "phpdocumentor/shim": "^3.7"
+    },
+    "config": {
+        "allow-plugins": {
+            "phpdocumentor/shim": true
+        }
     }
 }
