--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     },
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "phpdocumentor/shim": "^3.7"
+        "phpdocumentor/shim": "^3.7",
+        "symfony/console": "^7.2"
     },
     "config": {
         "allow-plugins": {
